syntax = "proto3";
package settlus.oracle.v1alpha1;

import "gogoproto/gogo.proto";

option go_package = "github.com/settlus/chain/x/oracle/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  uint64 vote_period = 1;
  string vote_threshold = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string slash_fraction = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  uint64 slash_window = 4;
  uint64 max_miss_count_per_slash_window = 5;
}

// OracleTopic defines the type of oracle data. It is used to distinguish
// different types of oracle data.
enum OracleTopic {
  // DEPRECATED: Do not use.
  BLOCK = 0;
  // Ownership defines nft ownership consensus.
  OWNERSHIP = 1;
}

message OracleData {
  OracleTopic topic = 1;
  repeated string sources = 2;
}

message VoteData {
  OracleTopic topic = 1;
  repeated string data = 2;
}

message AggregatePrevote {
  string hash = 1;
  string voter = 2;
}

message AggregateVote {
  repeated VoteData vote_data = 1;
  string voter = 2;
}

message BlockData {
  string chain_id = 1;
  int64 block_number = 2;
  string block_hash = 3;
}

message FeederDelegation {
  string feeder_address = 1;
  string validator_address = 2;
}

message MissCount {
  string validator_address = 1;
  uint64 miss_count = 2;
}

message RoundInfo {
  uint64 id = 1;
  int64 prevote_end = 2;
  int64 vote_end = 3;
  repeated OracleData oracle_data = 4;
  // UNIX time in milliseconds
  int64 timestamp = 5;
}
